# ekf-slam-thesis

./: .gitignore  GT_Baseline_Interpretations.md  LICENSE  Phase_1_README.md  Phase_2.4_IMU_LAUNCH_FILE_SETUPS.md  Phase_2.7_Recording_wheel_only_and_EKF_baseline_bags.md  Phase_2.8_Baseline_Analysis_Pipeline_Documentation.md  Phase_2_Warehouse_Floor_friction_Setup.md  README.md  ROS2_OmniGrapg_setup.txt  clear_gpu_cache.py
src/ekf_slam_sim/: package.xml  setup.py
src/ekf_slam_sim/config/: ekf_params.yaml  imu_params.yaml  odom_params.yaml  qos_clock_override.yaml
src/ekf_slam_sim/ekf_slam_sim/: encoder_odom_publisher.py  final_traj_phase_marker.py  fixed_rate_teleop_twist_keyboard.py  imu_covariance_fixer.py  trajectory_player.py
src/ekf_slam_sim/experiments/wheel_calibration/BWD_10m_calibration/1_bwd_10m_rosbag2_2026_02_10-17_38_06/: analyse_radius_from_bag.py  metadata.yaml
src/ekf_slam_sim/experiments/wheel_calibration/BWD_10m_calibration/2_bwd_10m_rosbag2_2026_02_10-16_37_41/: metadata.yaml
src/ekf_slam_sim/experiments/wheel_calibration/CCW_wheel_separation_calibration/1_ccw_rosbag2_2026_02_10-17_59_26/: metadata.txt  metadata.yaml
src/ekf_slam_sim/experiments/wheel_calibration/CCW_wheel_separation_calibration/2_ccw_rosbag2_2026_02_10-18_00_59/: analyze_separation_from_bag.py  metadata.txt  (+1 more)
src/ekf_slam_sim/launch/: deprecated_ekf_slam.launch.py  ekf.launch.py  ekf_slam.launch.py  trajectory_test.launch.py  wheel_only.launch.py
src/ekf_slam_sim/scripts/: encoder_odom_publisher.py  final_traj_phase_marker.py  fixed_rate_teleop_twist_keyboard.py  test_bridge.py  trajectory_phase_marker.py  trajectory_player.py
(+146 files in other folders)
