<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ekf_slam_sim</name>
  <version>0.1.0</version>
  <description>Hybrid AI-Augmented EKF-SLAM System Simulation</description>
  <maintainer email="harishprabhu3007@gmail.com">Harish Prabhu</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  
  <!-- Specific package dependencies -->
  <depend>rosbag2_py</depend>          <!-- For data recording -->
  <depend>teleop_twist_keyboard</depend> <!-- Optional teleop -->
  <depend>joy</depend>                 <!-- Joystick support -->
  
  <!-- Optional: Add for visualization -->
  <!-- <depend>rviz2</depend> -->
  <!-- <depend>image_transport</depend> -->
  
  <!-- Optional: Add for future ML integration -->
  <!-- <depend>cv_bridge</depend> -->
  <!-- <depend>opencv</depend> -->

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- CRITICAL: This tells ROS2 how to build your package -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
